# comkube

./: .dockerignore  .gitignore  .gitlint  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  comkube.py  compose.yaml  flake.nix  go.mod  go.sum  kuttl-test.yaml  main.go
.github/workflows/: release.yaml
chart/: Chart.yaml  values.schema.json  values.yaml
chart/dev/: expected_notes.md  test.sh  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  cluster-role-binding.yaml.tpl  cluster-role.yaml.tpl  deployment.yaml.tpl  service-account.yaml.tpl
chart/testing/: expected_notes.md  test.sh
crd/convert_json_schema_to_k8s_schema/: dereference_json_schema.js  filter.jq  main.sh  package-lock.json  test.sh  test_cases.json  test_idempotence.sh  test_suite.json
crd/generate_crd/: crd_template.json  main.sh
crd_generator/: generate_crd.sh  package.json
e2e_tests/basic_app_is_created/: 00-assert.yaml
e2e_tests/compose_files_are_configurable/: 00-act.yaml  00-assert.yaml
e2e_tests/compose_profiles_are_configurable/: 00-act.yaml  00-errors.yaml  expected.yaml
e2e_tests/debug_annotations_are_configurable/: 00-act.yaml  00-assert.yaml
e2e_tests/replicas_are_configurable/: 00-act.yaml  00-assert.yaml  compose.yaml
example/: k8s-compose-app.yaml  kustomization.yaml  my-k8s-compose-app.yaml
examples/basic/: compose.yaml  my-k8s-compose-app.yaml  test.sh
examples/container_environment_config/: expected.yaml  my-k8s-compose-app.yaml  test.sh
examples/container_environment_config/my_config/: .env  (+1 more)
examples/quick_start/: kustomization.yaml  test.sh
helm_chart/: Chart.yaml  values.schema.json  values.yaml
helm_chart/templates/: NOTES.txt  _helpers.tpl  cluster-role-binding.yaml  cluster-role-binding.yaml.tpl  deployment.yaml  deployment.yaml.tpl  service-account.yaml  service-account.yaml.tpl
internal/app/: apply.go  main.go  main_test.go  up.go
manifests/: .gitignore  controller.yaml  crd.yaml  object.yaml
scripts/: release.md  test.sh  test_kit.py  test_utility_cases.py
src/: get_desired_state.rs  kompose.rs  main.rs
src/kompose/: mod.rs  test_expected_output.yaml  test_input.yaml
tests/: validation.json
tests/validation/: invalid-spec.yaml  test.sh  test_cases.json
(+38 files in other folders)
