[package]
name = "comkube"
version = "0.1.0"
edition = "2024"                                                               # Update-worthy.
description = "Deploy Docker Compose Apps on Kubernetes"
homepage = "https://github.com/evolutics/comkube"
repository = "https://github.com/evolutics/comkube"
license = "MIT"
keywords = ["compose", "deployment", "docker", "docker-compose", "kubernetes"]
categories = ["virtualization"]

# Update-worthy.
[dependencies]
anyhow = "1"
futures = "0"
k8s-openapi = { version = "0", features = ["latest"] }
kube = { version = "1", features = ["runtime", "client", "derive"] }
schemars = { version = "0", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
